done with clean up

--- a/config/hydroshare-config.yaml
+++ b/config/hydroshare-config.yaml
@@ -1,19 +1,19 @@
 ### Local Configuration Variables ###
-HS_PATH: /home/hydro/hydroshare
-HOST_SSL_DIR: /home/hydro/hs-certs
+HS_PATH: /home/hongyi/hydroshare
+HOST_SSL_DIR: /home/hongyi/hs-certs
 HS_DATABASE: pg.development.sql
-HS_LOG_FILES: /home/hydro/hydroshare/log
+HS_LOG_FILES: /home/hongyi/hydroshare/log
 HS_SERVICE_UID: 1000
 HS_SERVICE_GID: 1000
 
 ### Deployment Options ###
-USE_NGINX: true
+USE_NGINX: false 
 USE_SSL: false
 USE_SECURITY: false
 USE_HTTP_AUTH: false
 
 ### SSL Configuration Variables ###
-SSL_CERT_DIR: /home/hydro/hydroshare/nginx/cert-files
+SSL_CERT_DIR: /home/hongyi/hydroshare/nginx/cert-files
 SSL_CERT_FILE: hydrodev-vb.example.org.cert
 SSL_KEY_FILE: hydrodev-vb.example.org.key
 
@@ -23,7 +23,7 @@ SSL_KEY_FILE: hydrodev-vb.example.org.key
 FQDN_OR_IP: localhost
 
 ### Where to find Nginx configuration
-NGINX_DIR: /home/hydro/hydroshare/nginx
+NGINX_DIR: /home/hongyi/hydroshare/nginx
 
 ### Mount point in host operating system (outside docker)
 ### This is mounted from here into the Nginx container
