--- a/local-dev.yml
+++ b/local-dev.yml
@@ -27,16 +27,13 @@ services:
       IRODS_GLOBAL_SESSION: 'True'
       REMOTE_USE_IRODS: 'True'
       HS_USER_ZONE_HOST: 'users.local.org'
-      HS_USER_ZONE_PROXY_USER: 'hsuserproxy'
-      HS_USER_ZONE_PROXY_USER_PWD: 'hsuserproxy'
-      HS_USER_ZONE_PROXY_USER_CREATE_USER_CMD: '/home/hsuserproxy/create_user.sh'
-      HS_USER_ZONE_PROXY_USER_DELETE_USER_CMD: '/home/hsuserproxy/delete_user.sh'
-      HS_LOCAL_PROXY_USER_IN_FED_ZONE: 'localHydroProxy'
-      HS_WWW_IRODS_PROXY_USER: 'wwwHydroProxy'
-      HS_WWW_IRODS_PROXY_USER_PWD: 'wwwHydroProxy'
-      HS_WWW_IRODS_HOST: 'data.local.org'
-      HS_IRODS_LOCAL_ZONE_DEF_RES: 'hydroshareLocalResc'
-      HS_WWW_IRODS_ZONE: 'hydroshareZone'
+      LINUX_ADMIN_USER_FOR_HS_USER_ZONE: 'hsuserproxy'
+      LINUX_ADMIN_USER_PWD_FOR_HS_USER_ZONE: 'hsuserproxy'
+      LINUX_ADMIN_USER_CREATE_USER_IN_USER_ZONE_CMD: '/home/hsuserproxy/create_user.sh'
+      LINUX_ADMIN_USER_DELETE_USER_IN_USER_ZONE_CMD: '/home/hsuserproxy/delete_user.sh'
+      HS_IRODS_PROXY_USER_IN_USER_ZONE: 'localHydroProxy'
+      HS_IRODS_USER_ZONE_DEF_RES: 'hydroshareLocalResc'
+      IRODS_ZONE: 'hydroshareZone'
       HS_USER_IRODS_ZONE: 'hydroshareuserZone'
       IRODS_ZONE_NAME: 'hydroshareZone'
       IRODS_SERVER_ZONE_KEY: 'hydroshareZone_KEY'
@@ -68,16 +65,12 @@ services:
       IRODS_GLOBAL_SESSION: 'True'
       REMOTE_USE_IRODS: 'True'
       HS_USER_ZONE_HOST: 'users.local.org'
-      HS_USER_ZONE_PROXY_USER: 'hsuserproxy'
-      HS_USER_ZONE_PROXY_USER_PWD: 'hsuserproxy'
-      HS_USER_ZONE_PROXY_USER_CREATE_USER_CMD: '/home/hsuserproxy/create_user.sh'
-      HS_USER_ZONE_PROXY_USER_DELETE_USER_CMD: '/home/hsuserproxy/delete_user.sh'
-      HS_LOCAL_PROXY_USER_IN_FED_ZONE: 'localHydroProxy'
-      HS_WWW_IRODS_PROXY_USER: 'wwwHydroProxy'
-      HS_WWW_IRODS_PROXY_USER_PWD: 'wwwHydroProxy'
-      HS_WWW_IRODS_HOST: 'data.local.org'
-      HS_IRODS_LOCAL_ZONE_DEF_RES: 'hydroshareLocalResc'
-      HS_WWW_IRODS_ZONE: 'hydroshareZone'
+      LINUX_ADMIN_USER_FOR_HS_USER_ZONE: 'hsuserproxy'
+      LINUX_ADMIN_USER_PWD_FOR_HS_USER_ZONE: 'hsuserproxy'
+      LINUX_ADMIN_USER_CREATE_USER_IN_USER_ZONE_CMD: '/home/hsuserproxy/create_user.sh'
+      LINUX_ADMIN_USER_DELETE_USER_IN_USER_ZONE_CMD: '/home/hsuserproxy/delete_user.sh'
+      HS_IRODS_PROXY_USER_IN_USER_ZONE: 'localHydroProxy'
+      HS_IRODS_USER_ZONE_DEF_RES: 'hydroshareLocalResc'
       HS_USER_IRODS_ZONE: 'hydroshareuserZone'
       IRODS_ZONE_NAME: 'hydroshareuserZone'
       IRODS_SERVER_ZONE_KEY: 'hydroshareuserZone_KEY'
