--- a/local-dev.yml
+++ b/local-dev.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   data.local.org:
-    image: hydroshare/hs-irods:4.2.6
+    image: hydroshare/hs-irods:latest
     container_name: data.local.org
     hostname: data.local.org
     links:
@@ -9,7 +9,6 @@ services:
     ports:
       - "1247:1247"
     volumes:
-      - "idata_root_vol:/root"
       - "idata_iconf_vol:/etc/irods"
       - "idata_vault_vol:/var/lib/irods"
       - "idata_pgres_vol:/var/lib/postgresql/data"
@@ -44,12 +43,10 @@ services:
     stdin_open: true
     tty: true
   users.local.org:
-    image: hydroshare/hs-irods:4.2.6
+    image: hydroshare/hs-irods:latest
     container_name: users.local.org
     hostname: users.local.org
     volumes:
-      - "iuser_root_vol:/root"
-      - "iuser_hspx_vol:/home/hsuserproxy"
       - "iuser_iconf_vol:/etc/irods"
       - "iuser_vault_vol:/var/lib/irods"
       - "iuser_pgres_vol:/var/lib/postgresql/data"
@@ -151,9 +148,11 @@ services:
       PYTHONPATH: /hydroshare
       DJANGO_SETTINGS_MODULE: hydroshare.settings
     volumes:
+      # hydroshare repository
       - ".:/hydroshare"
-      - "temp_vol:/tmp"
-      - "hs_temp_vol:/hs_tmp"
+      # shared location for gunicorn.sock between containers
+      - "temp_vol:/hs_tmp"
+      # temp directory shared with celery workers
       - "share_vol:/shared_tmp"
     ports:
       - "1338:2022"
@@ -197,9 +196,6 @@ services:
       - "5555:5555"
     volumes:
       - ".:/hydroshare"
-      - "temp_vol:/tmp"
-      - "hs_temp_vol:/hs_tmp"
-      - "share_vol:/shared_tmp"
     links:
       - postgis:postgis
       - rabbitmq:rabbitmq
@@ -219,15 +215,11 @@ volumes:
   idata_iconf_vol:
   idata_vault_vol:
   idata_pgres_vol:
-  idata_root_vol:
   iuser_iconf_vol:
   iuser_vault_vol:
   iuser_pgres_vol:
-  iuser_root_vol:
-  iuser_hspx_vol:
   postgis_data_vol:
   solr_data_vol:
   temp_vol:
-  hs_temp_vol:
   share_vol:
   rabbitmq_data_vol:
