added get_modified_time() and test

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ exclude=
   hs_core/tests/api/native/test_get_capabilities.py,
   hs_core/tests/api/native/test_get_checksum.py,
   hs_core/tests/api/native/test_get_resource.py,
+  hs_core/tests/api/native/test_get_resource_file.py,
   hs_core/tests/api/native/test_get_resource_types.py,
   hs_core/tests/api/native/test_get_revisions.py,
   hs_core/tests/api/native/test_group_from_id.py,
