--- a/nginx/config-files/hydroshare-ssl-nginx.conf.template
+++ b/nginx/config-files/hydroshare-ssl-nginx.conf.template
@@ -12,6 +12,25 @@ geo $external {
   10.0.0.0/8 0;
 }
 
+limit_req_zone $binary_remote_addr zone=applaunch:10m rate=2r/s;
+
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+proxy_set_header X-Forwarded-Proto $scheme;
+
+client_max_body_size 4096m;
+client_body_buffer_size 1m;
+proxy_intercept_errors on;
+proxy_buffering on;
+proxy_buffer_size 128k;
+proxy_buffers 256 16k;
+proxy_busy_buffers_size 256k;
+proxy_temp_file_write_size 256k;
+proxy_max_temp_file_size 0;
+proxy_connect_timeout 300s;
+proxy_read_timeout 300;
+
 server {
     listen          80;
     server_name     FQDN_OR_IP;
@@ -84,26 +103,24 @@ server {
         if (-f $document_root/maintenance_on.html) {
             return 503;
         }
-
         proxy_pass http://unix:/hs_tmp/gunicorn.sock;
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Django-Reverse-Proxy true;
+    }
 
-        client_max_body_size 4096m;
-        client_body_buffer_size 1m;
-        proxy_intercept_errors on;
-        proxy_buffering on;
-        proxy_buffer_size 128k;
-        proxy_buffers 256 16k;
-        proxy_busy_buffers_size 256k;
-        proxy_temp_file_write_size 256k;
-        proxy_max_temp_file_size 0;
-        proxy_connect_timeout 300s;
-        proxy_read_timeout 300;
+    location /tracking/applaunch/ {
+        if (-f $document_root/maintenance_on.html) {
+            return 503;
+        }
+        limit_req zone=applaunch burst=50;
+        proxy_pass http://unix:/hs_tmp/gunicorn.sock; 
+    }
+
+    location /tracking/applaunch/ {
+        if (-f $document_root/maintenance_on.html) {
+            return 503;
+        }
+        limit_req zone=applaunch burst=50;
+        proxy_pass http://unix:/hs_tmp/gunicorn.sock; 
     }
 
     location / { 
