--- a/nginx/config-files/hydroshare-ssl-nginx.conf.template
+++ b/nginx/config-files/hydroshare-ssl-nginx.conf.template
@@ -1,7 +1,12 @@
 # hydroshare-ssl-nginx.conf
- 
+#
+# This is the configuration for the active Nginx server that interacts with Django and iRODs.
+# It should be named /home/hydro/hydroshare/nginx/config-files/hydroshare-ssl-nginx.conf
+# This contains the django interface but request chokes are now implemented on the
+# outer (downstream) switch server that chooses hydroshare instances.
+
 # $external is 1 if the URI is external and 0 if it cannot possibly be
-# external due to use of RFC-1918 addressing. This avoids redirects 
+# external due to use of RFC-1918 addressing. This avoids redirects
 # to canonical naming when a request comes from inside hydroshare
 
 geo $external {
@@ -10,9 +15,10 @@ geo $external {
   172.16.0.0/12 0;
   127.0.0.0/8 0;
   10.0.0.0/8 0;
+  152.54.0.0/22 0;
 }
 
-limit_req_zone $binary_remote_addr zone=applaunch:10m rate=2r/s;
+limit_req_zone $binary_remote_addr zone=applaunch:10m rate=5r/s;
 
 proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
@@ -34,11 +40,11 @@ proxy_read_timeout 300;
 server {
     listen          80;
     server_name     FQDN_OR_IP;
-    # This should not rewrite hostname! 
+    # This should not rewrite hostname!
     # rewrite ^/(.*)  https://FQDN_OR_IP/$1 permanent;
-    # This syntax is considered more efficient in nginx documentation 
-    # and does the same thing as the above: 
-    return 301 https://$http_host/$request_uri; 
+    # This syntax is considered more efficient in nginx documentation
+    # and does the same thing as the above:
+    return 301 https://$http_host/$request_uri;
 }
 
 server {
@@ -49,7 +55,7 @@ server {
     # Compute whether we need to rewrite an address. Rewrite all erronious
     # external addresses but avoid rewriting internal references (from django
     # management commands).
-     
+
     set $need_rewrite 0;
 
     if ($http_host != "FQDN_OR_IP") {
@@ -67,7 +73,7 @@ server {
     access_log      /var/log/nginx/access.log combined;
     error_log       /var/log/nginx/error.log error;
     error_log       /var/log/nginx/system.log notice;
-    # Uncomment the following line to generate debugging log entries 
+    # Uncomment the following line to generate debugging log entries
     # error_log       /var/log/nginx/system.log debug;
 
     charset         utf-8;
@@ -85,17 +91,17 @@ server {
     }
 
     location /IRODS_DATA_URI/ {
-        internal; 
+        internal;
         alias IRODS_DATA_ROOT/;
     }
 
     location /IRODS_USER_URI/ {
-        internal; 
+        internal;
         alias IRODS_USER_ROOT/;
     }
 
     location /IRODS_CACHE_URI/ {
-        internal; 
+        internal;
         alias IRODS_CACHE_ROOT/;
     }
 
@@ -112,27 +118,22 @@ server {
             return 503;
         }
         limit_req zone=applaunch burst=50;
-        proxy_pass http://unix:/hs_tmp/gunicorn.sock; 
+        proxy_pass http://unix:/hs_tmp/gunicorn.sock;
     }
 
-    location /tracking/applaunch/ {
+    location / {
         if (-f $document_root/maintenance_on.html) {
             return 503;
         }
-        limit_req zone=applaunch burst=50;
-        proxy_pass http://unix:/hs_tmp/gunicorn.sock; 
-    }
-
-    location / { 
-        if (-f $document_root/maintenance_on.html) {
-            return 503;
-        }
+        # This curious directive allows admin static files to be referenced
+        # as /admin/* rather than /static/admin/*, and mezzanine static files to
+        # be referenced as /mezzanine/* rather than /static/mezzanine/*.
         try_files $uri @proxy;
-    } 
+    }
 
-    location @proxy { 
-        proxy_pass http://unix:/hs_tmp/gunicorn.sock; 
-    } 
+    location @proxy {
+        proxy_pass http://unix:/hs_tmp/gunicorn.sock;
+    }
 
     error_page 503 @maintenance;
     location @maintenance {
