--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = hydroshare/settings.py
+DJANGO_SETTINGS_MODULE = hydroshare.settings.py
 python_files = pytest/functional*
+python_paths = .
 filterwarnings =
     ignore::DeprecationWarning
