[#3519] fixing module settings for pytest

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = hydroshare.settings.py
+DJANGO_SETTINGS_MODULE = hydroshare.settings
 python_files = pytest/functional*
 python_paths = .
 filterwarnings =
