[#3519] moving pytest run command options to ini file

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+addopts = --cov-report xml --cov-append --cov=pytest/functional
 DJANGO_SETTINGS_MODULE = hydroshare.settings
 python_files = pytest/functional*
 python_paths = .
