[#3519] output pytest results to pytest.xml file

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --cov-report xml --cov-append --cov=pytest/functional
+addopts = -x --cov-report xml --cov-append --cov=pytest/functional --junitxml="pytests.xml"
 DJANGO_SETTINGS_MODULE = hydroshare.settings
 python_files = pytest/functional*
 python_paths = .
