--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 addopts = -x --cov-report xml --cov-append --cov=pytest/functional --junitxml="pytests.xml"
 DJANGO_SETTINGS_MODULE = hydroshare.settings
 python_files = pytest/functional*
+junit_family = xunit1
 python_paths = .
 filterwarnings =
     ignore::DeprecationWarning
