update template to include pyDataerse library

--- a/Dockerfile-hydroshare.template
+++ b/Dockerfile-hydroshare.template
@@ -6,5 +6,6 @@ RUN mkdir /shared_tmp
 RUN chown -R hydro-service:storage-hydro /hydroshare
 RUN chown -R hydro-service:storage-hydro /hs_tmp
 RUN chown -R hydro-service:storage-hydro /shared_tmp
+RUN pip install pyDataverse
 
 CMD ["runuser", "-p", "-u", "hydro-service", "-g", "storage-hydro", "python", "manage.py", "runserver", "0.0.0.0:8000"]
