[#3887] Fix redirect syntax
Tested on beta with `nginx -t` and `nginx -s reload`

--- a/nginx/config-files/hydroshare-ssl-nginx-ingress.conf.template
+++ b/nginx/config-files/hydroshare-ssl-nginx-ingress.conf.template
@@ -27,7 +27,7 @@ server {
     root            /system/static/;
 
     if ($http_host != "FQDN_OR_IP") {
-        return 301 https://FQDN_OR_IP$request_uri
+        return 301 https://FQDN_OR_IP$request_uri;
     }
 
     access_log      /var/log/nginx/access.log combined;
