Revert "[#3887] redirect subdomains other than www on port 443"

--- a/nginx/config-files/hydroshare-ssl-nginx-ingress.conf.template
+++ b/nginx/config-files/hydroshare-ssl-nginx-ingress.conf.template
@@ -18,17 +18,13 @@ upstream backend {
 server {
     listen          80;
     server_name     FQDN_OR_IP;
-    return 301 https://FQDN_OR_IP$request_uri;
+    rewrite ^/(.*)  https://FQDN_OR_IP/$1 permanent;
 }
 
 server {
     listen          443 ssl;
     server_name     FQDN_OR_IP;
-    root            /system/static/;
-
-    if ($http_host != "FQDN_OR_IP") {
-        return 301 https://FQDN_OR_IP$request_uri;
-    }
+    root            /system/static/; 
 
     access_log      /var/log/nginx/access.log combined;
     error_log       /var/log/nginx/error.log debug;
