--- a/hs_discover/package.json
+++ b/hs_discover/package.json
@@ -40,7 +40,14 @@
       "plugin:vue/essential",
       "@vue/airbnb"
     ],
-    "rules": {},
+    "rules": {
+      "max-len": [
+        "error",
+        {
+          "code": 125
+        }
+      ]
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
