--- a/nginx/config-files/hydroshare-nginx.conf.template
+++ b/nginx/config-files/hydroshare-nginx.conf.template
@@ -20,14 +20,18 @@ proxy_set_header X-Forwarded-Proto $scheme;
 client_max_body_size 4096m;
 client_body_buffer_size 1m;
 proxy_intercept_errors on;
-proxy_buffering on;
+
+# Turning on buffering is not recommended for long-running async responders like Gevent. 
+proxy_buffering off;
 proxy_buffer_size 128k;
 proxy_buffers 256 16k;
 proxy_busy_buffers_size 256k;
 proxy_temp_file_write_size 256k;
 proxy_max_temp_file_size 0;
+
+# these should be short, as no response indicates that something is severely broken. 
 proxy_connect_timeout 300s;
-proxy_read_timeout 300;
+proxy_read_timeout 30;
 
 server {
     listen          80;
