--- a/nginx/config-files/hydroshare-ssl-nginx.conf.template
+++ b/nginx/config-files/hydroshare-ssl-nginx.conf.template
@@ -26,7 +26,7 @@ proxy_set_header X-Forwarded-Proto $scheme;
 client_max_body_size 4096m;
 client_body_buffer_size 1m;
 proxy_intercept_errors on;
-proxy_buffering on;
+proxy_buffering off;
 proxy_buffer_size 128k;
 proxy_buffers 256 16k;
 proxy_busy_buffers_size 256k;
@@ -107,8 +107,8 @@ server {
         if (-f $document_root/maintenance_on.html) {
             return 503;
         }
-        proxy_pass http://unix:/hs_tmp/gunicorn.sock;
         proxy_set_header X-Django-Reverse-Proxy true;
+        proxy_pass http://unix:/hs_tmp/gunicorn.sock;
     }
 
     location / {
