--- a/nginx/config-files/hydroshare-nginx.conf.template
+++ b/nginx/config-files/hydroshare-nginx.conf.template
@@ -1,8 +1,8 @@
-# hydroshare-nginx.conf                                                         
+# hydroshare-nginx.conf
 
-# $external is 1 if the URI is external and 0 if it cannot possibly be 
+# $external is 1 if the URI is external and 0 if it cannot possibly be
 # external due to use of RFC-1918 addressing. This enables loopback
-# testing of reverse proxy in management commands. 
+# testing of reverse proxy in management commands.
 
 geo $external {
   default 1;
@@ -21,7 +21,7 @@ client_max_body_size 4096m;
 client_body_buffer_size 1m;
 proxy_intercept_errors on;
 
-# Turning on buffering is not recommended for long-running async responders like Gevent. 
+# Turning on buffering is not recommended for long-running async responders like Gevent.
 proxy_buffering off;
 proxy_buffer_size 128k;
 proxy_buffers 256 16k;
@@ -29,19 +29,19 @@ proxy_busy_buffers_size 256k;
 proxy_temp_file_write_size 256k;
 proxy_max_temp_file_size 0;
 
-# these should be short, as no response indicates that something is severely broken. 
+# These should be short, as something serious is wrong when these time out.
 proxy_connect_timeout 300s;
-proxy_read_timeout 30;
+proxy_read_timeout 300;
 
 server {
     listen          80;
     server_name     FQDN_OR_IP;
     root            /hydroshare/hydroshare/static/;
 
-    # Compute whether we need to rewrite an address. Rewrite all erronious 
-    # external addresses but avoid rewriting internal references (from django 
-    # management commands). 
-     
+    # Compute whether we need to rewrite an address. Rewrite all erronious
+    # external addresses but avoid rewriting internal references (from django
+    # management commands).
+
     set $need_rewrite 0;
 
     if ($http_host != "FQDN_OR_IP") {
@@ -74,17 +74,17 @@ server {
     }
 
     location /IRODS_DATA_URI/ {
-        internal; 
+        internal;
         alias IRODS_DATA_ROOT/;
     }
 
     location /IRODS_USER_URI/ {
-        internal; 
+        internal;
         alias IRODS_USER_ROOT/;
     }
 
     location /IRODS_CACHE_URI/ {
-        internal; 
+        internal;
         alias IRODS_CACHE_ROOT/;
     }
 
@@ -96,16 +96,16 @@ server {
         proxy_set_header X-Django-Reverse-Proxy true;
     }
 
-    location / { 
+    location / {
         if (-f $document_root/maintenance_on.html) {
             return 503;
         }
         try_files $uri @proxy;
-    } 
+    }
 
-    location @proxy { 
+    location @proxy {
         proxy_pass http://unix:/hs_tmp/gunicorn.sock;
-    } 
+    }
 
     error_page 503 @maintenance;
     location @maintenance {
