--- a/nginx/config-files/hydroshare-ssl-nginx.conf.template
+++ b/nginx/config-files/hydroshare-ssl-nginx.conf.template
@@ -26,16 +26,12 @@ proxy_set_header X-Forwarded-Proto $scheme;
 client_max_body_size 4096m;
 client_body_buffer_size 1m;
 proxy_intercept_errors on;
-
-# Turning on buffering is not recommended for long-running async responders like Gevent.
-proxy_buffering off;
+proxy_buffering on;
 proxy_buffer_size 128k;
 proxy_buffers 256 16k;
 proxy_busy_buffers_size 256k;
 proxy_temp_file_write_size 256k;
 proxy_max_temp_file_size 0;
-
-# These should be short, as something serious is wrong when these time out.
 proxy_connect_timeout 300s;
 proxy_read_timeout 300;
 
@@ -111,8 +107,8 @@ server {
         if (-f $document_root/maintenance_on.html) {
             return 503;
         }
-        proxy_set_header X-Django-Reverse-Proxy true;
         proxy_pass http://unix:/hs_tmp/gunicorn.sock;
+        proxy_set_header X-Django-Reverse-Proxy true;
     }
 
     location / {
